Implement demo structure directive

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -8,5 +8,6 @@
 
 <!-- <app-hello></app-hello> -->
 <!-- <app-order-list></app-order-list> -->
-<app-todos></app-todos>
+<!-- <app-todos></app-todos> -->
+<app-demo-show-when></app-demo-show-when>
 
