Demo two ways data binding

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -9,5 +9,6 @@
 <!-- <app-hello></app-hello> -->
 <!-- <app-order-list></app-order-list> -->
 <!-- <app-todos></app-todos> -->
-<app-demo-show-when></app-demo-show-when>
+<!-- <app-demo-show-when></app-demo-show-when> -->
+<app-employee></app-employee>
 
