--- a/front-end/src/app/form-model-driven/employee/employee.component.html
+++ b/front-end/src/app/form-model-driven/employee/employee.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h5>Add new employee</h5>
   <form (ngSubmit)="save()" #empForm="ngForm" novalidate>
     <div class="form-group">
       <label for="empNo">EmpNo</label>
@@ -15,11 +16,23 @@
         Employee name is mandatory
       </div>
     </div>
-    <hr>
-
-    <div class="form-group">
+    <hr><th>Employee No</th>
+    <th>Employee No</th>
+    <div class="form-group"><th>Employee No</th>
       <input type="button" (click)="clear()" value="Clear" class="btn btn-danger">
       <input type="submit" value="Submit" class="btn btn-success" [disabled]="!empForm.valid">
     </div>
   </form>
+  <hr>
+  <h5>Employee list</h5>
+  <table class="table table-stripped">
+    <thead>
+      <th>Employee No</th>
+      <th>Employee Name</th>
+    </thead>
+    <tr *ngFor="let employee of employees">
+      <td>{{employee.empNo}}</td>
+      <td>{{employee.empName}}</td>
+    </tr>
+  </table>
 </div>
