--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -7,5 +7,6 @@
 </div>
 
 <!-- <app-hello></app-hello> -->
-<app-employee></app-employee>
+<!-- <app-employee></app-employee> -->
+<chat-app></chat-app>
 
